--- a/dotfiles/zsh/config
+++ b/dotfiles/zsh/config
@@ -52,7 +52,7 @@ bindkey -e
 
 # enable color support of ls and also add handy aliases
 if [ "$TERM" != "dumb" ] && [ -x /usr/bin/dircolors ]; then
-    eval `dircolors -b`
+    eval `dircolors`
     alias ls='ls --color=auto'
     #alias dir='ls --color=auto --format=vertical'
     #alias vdir='ls --color=auto --format=long'
